View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024992 | Community | OCCT:Coding | public | 2014-06-06 07:12 | 2014-11-11 12:57 |
Reporter | guidovanhilst | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.1 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0024992: missing implementation for GeomConvert_CompCurveToBSplineCurve::Clear() | ||||
Description | The issue has been reported by guidovanhilst on OCCT dev forum (http://dev.opencascade.org/index.php?q=node/974): In GeomConvert_CompCurveToBSplineCurve ,in the header file, there is a definition for the function "Clear()", but linker is complaining that this function is not in the lib. I looked in the source and indeed could not find it? Is it obsolete? GeomConvert_CompCurveToBSplineCurve::Clear() | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Fix pushed to CR24992 |
|
Please re-base / check compilation and integrate. |
|
Branch CR24992 has been updated forcibly by apv. SHA-1: 8ea07c6460f7445b413101a08a73cd2a3361df0c |
|
Dear BugMaster, Branch CR24992 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms. SHA-1: 8ea07c6460f7445b413101a08a73cd2a3361df0c Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) MacOS: 196 (196 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) |
|
Branch CR24992 has been deleted by inv. SHA-1: 8ea07c6460f7445b413101a08a73cd2a3361df0c |
occt: master 2961777a 2014-06-06 03:19:19 Committer: bugmaster Details Diff |
0024992: missing implementation for GeomConvert_CompCurveToBSplineCurve::Clear() Method GeomConvert_CompCurveToBSplineCurve::Clear() implemented |
Affected Issues 0024992 |
|
mod - src/GeomConvert/GeomConvert_CompCurveToBSplineCurve.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-06-06 07:12 | abv | New Issue | |
2014-06-06 07:12 | abv | Assigned To | => kgv |
2014-06-06 07:19 | abv | Note Added: 0029722 | |
2014-06-06 07:19 | abv | Reporter | abv => guidovanhilst |
2014-06-06 07:19 | abv | Status | new => resolved |
2014-07-29 21:08 | kgv | Note Added: 0030478 | |
2014-07-29 21:08 | kgv | Assigned To | kgv => bugmaster |
2014-07-29 21:08 | kgv | Severity | minor => trivial |
2014-07-29 21:08 | kgv | Status | resolved => reviewed |
2014-07-30 14:44 | git | Note Added: 0030493 | |
2014-07-30 17:54 |
|
Test case number | => Not needed |
2014-07-30 17:56 |
|
Note Added: 0030495 | |
2014-07-30 17:56 |
|
Status | reviewed => tested |
2014-08-01 14:55 | bugmaster | Changeset attached | => occt master 2961777a |
2014-08-01 14:55 | bugmaster | Status | tested => verified |
2014-08-01 14:55 | bugmaster | Resolution | open => fixed |
2014-08-18 11:07 | git | Note Added: 0030824 | |
2014-11-11 12:45 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:57 |
|
Status | verified => closed |