0024992: missing implementation for GeomConvert_CompCurveToBSplineCurve::Clear()

Method GeomConvert_CompCurveToBSplineCurve::Clear() implemented